@@ -29,6 +29,7 @@ Changes after 2.6.11:
 
 - GUI and display libraries
     - X11 keymaps: added new one for Swiss-German and improved Italian map.
+    - RFB: added support for the pixel format RGB332.
 
 - LGPL'd VGABIOS updated from SVN (fixed text output in VGA graphics modes).
 
